--- a/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms/MainPage.xaml
+++ b/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms/MainPage.xaml
@@ -2,12 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FontesCustomizaveisXamarinForms"
-             x:Class="FontesCustomizaveisXamarinForms.MainPage">
+             x:Class="FontesCustomizaveisXamarinForms.MainPage" Padding="20,60,0,0">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout>
+                <Label Text="Welcome to Xamarin Forms! (SedgwickAveDisplay-Regular)" FontFamily="{StaticResource NormalFont}" />
+                <Label Text="Welcome to Xamarin Forms! (Default)" />
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
